--- a/css/main.scss
+++ b/css/main.scss
@@ -9,6 +9,7 @@
 @import "bigleap-video";
 @import "motion";
 @import "animate-bus";
+// @import "testimonials";
 @import "clients";
 @import "difference";
 @import "footer";
@@ -18,3 +19,6 @@
 @import "team";
 @import "services";
 @import "serviceprovide";
+@import "paragraph";
+@import "industries";
+@import "blogs";
