--- a/css/_blogs.scss
+++ b/css/_blogs.scss
@@ -1,61 +1,39 @@
-.team-area {
-    @include section;
-
-    h2 {
-        @include h2;
+.blogs-area {
+    padding: 120px 0 80px 0;
+    
+    @include h2;
+    h2{
         text-align: center;
-        margin-bottom: 30px;
     }
-
     .grid {
         position: relative;
-        clear: both;
         margin: 0 auto;
         padding: 1em 0 4em;
         max-width: 1000px;
         list-style: none;
         text-align: center;
 
-        @include respond-below(xl) {
-            padding: 0 0 130px 0 !important;
-        }
-
-        @include respond-below(lg) {
-            padding: 0 !important;
-        }
-
-        @include respond-below(md) {
-            padding: 0 !important;
-        }
-
-        @include respond-below(sm) {
-            padding: 0 !important;
-        }
-        .content{
+        .contents{
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-            h6{
-                color: #fff;
-            }
-            p{
-                color: #fff;
+
+             @include respond-below(md) {
+                align-items: center;
             }
         }
-
-
     }
 
+    /* Common style */
     .grid figure {
         position: relative;
         float: left;
         overflow: hidden;
         margin: 10px 1%;
-        // min-width: 320px;
-        // max-width: 480px;
-        // max-height: 360px;
+        min-width: 320px;
+        max-width: 480px;
+        max-height: 360px;
         width: 100%;
-        height: auto;
         background: #3085a3;
         text-align: center;
         cursor: pointer;
@@ -65,9 +43,8 @@
         position: relative;
         display: block;
         min-height: 100%;
-        // max-width: 100%;
+        max-width: 100%;
         opacity: 0.8;
-        width: 100%;
     }
 
     .grid figure figcaption {
@@ -122,50 +99,70 @@
         font-size: 68.5%;
     }
 
-    // salena 
+    /* Individual effects */
 
-    figure.effect-selena {
-        background: #fff;
-    }
+    /*---------------*/
+    /***** Lily *****/
+    /*---------------*/
 
-    figure.effect-selena img {
-        opacity: 0.95;
-        -webkit-transition: -webkit-transform 0.35s;
-        transition: transform 0.35s;
-        -webkit-transform-origin: 50% 50%;
-        transform-origin: 50% 50%;
-    }
-
-    figure.effect-selena:hover img {
-        -webkit-transform: scale3d(0.95, 0.95, 1);
-        transform: scale3d(0.95, 0.95, 1);
-    }
-
-    figure.effect-selena h2 {
-        -webkit-transition: -webkit-transform 0.35s;
-        transition: transform 0.35s;
-        -webkit-transform: translate3d(0, 20px, 0);
-        transform: translate3d(0, 20px, 0);
-    }
-
-    figure.effect-selena p {
-        opacity: 0;
+    figure.effect-lily img {
+        max-width: none;
+        width: -webkit-calc(100% + 50px);
+        width: calc(100% + 50px);
+        opacity: 0.7;
         -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
         transition: opacity 0.35s, transform 0.35s;
-        -webkit-transform: perspective(1000px) rotate3d(1, 0, 0, 90deg);
-        transform: perspective(1000px) rotate3d(1, 0, 0, 90deg);
-        -webkit-transform-origin: 50% 0%;
-        transform-origin: 50% 0%;
+        -webkit-transform: translate3d(-40px, 0, 0);
+        transform: translate3d(-40px, 0, 0);
     }
 
-    figure.effect-selena:hover h2 {
+    figure.effect-lily figcaption {
+        text-align: left;
+    }
+
+    figure.effect-lily figcaption>div {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        padding: 2em;
+        width: 100%;
+        height: 50%;
+    }
+
+    figure.effect-lily h2,
+    figure.effect-lily p {
+        -webkit-transform: translate3d(0, 40px, 0);
+        transform: translate3d(0, 40px, 0);
+    }
+
+    figure.effect-lily h2 {
+        -webkit-transition: -webkit-transform 0.35s;
+        transition: transform 0.35s;
+    }
+
+    figure.effect-lily p {
+        color: rgba(255, 255, 255, 0.8);
+        opacity: 0;
+        -webkit-transition: opacity 0.2s, -webkit-transform 0.35s;
+        transition: opacity 0.2s, transform 0.35s;
+    }
+
+    figure.effect-lily:hover img,
+    figure.effect-lily:hover p {
+        opacity: 1;
+    }
+
+    figure.effect-lily:hover img,
+    figure.effect-lily:hover h2,
+    figure.effect-lily:hover p {
         -webkit-transform: translate3d(0, 0, 0);
         transform: translate3d(0, 0, 0);
     }
 
-    figure.effect-selena:hover p {
-        opacity: 1;
-        -webkit-transform: perspective(1000px) rotate3d(1, 0, 0, 0);
-        transform: perspective(1000px) rotate3d(1, 0, 0, 0);
+    figure.effect-lily:hover p {
+        -webkit-transition-delay: 0.05s;
+        transition-delay: 0.05s;
+        -webkit-transition-duration: 0.35s;
+        transition-duration: 0.35s;
     }
 }
