--- a/css/main.scss
+++ b/css/main.scss
@@ -12,6 +12,7 @@
 // @import "testimonials";
 @import "clients";
 @import "difference";
+@import "enquiry";
 @import "footer";
 @import "faq";
 @import "instagram";
