--- a/css/_blogs.scss
+++ b/css/_blogs.scss
@@ -1,25 +1,32 @@
 .blogs-area {
     padding: 120px 0 80px 0;
-    
+
     @include h2;
-    h2{
+
+    h2 {
         text-align: center;
     }
+
     .grid {
         position: relative;
         margin: 0 auto;
         padding: 1em 0 4em;
-        max-width: 1000px;
+        // max-width: 1000px;
         list-style: none;
         text-align: center;
 
-        .contents{
+        .contents {
             display: flex;
             flex-direction: column;
             align-items: flex-start;
+            padding: 20px 50px;
 
-             @include respond-below(md) {
+            @include respond-below(md) {
                 align-items: center;
+            }
+
+            .btn {
+                margin: 10px 0 20px 0 !important;
             }
         }
     }
@@ -31,12 +38,22 @@
         overflow: hidden;
         margin: 10px 1%;
         min-width: 320px;
-        max-width: 480px;
-        max-height: 360px;
+        // max-width: 480px;
+        // max-height: 360px;
+        height: 450px;
         width: 100%;
         background: #3085a3;
         text-align: center;
         cursor: pointer;
+
+        @include respond-below(lg) {
+            height: 360px;
+        }
+        @include respond-below(sm) {
+            height: 360px;
+        }
+
+
     }
 
     .grid figure img {
@@ -65,9 +82,10 @@
     .grid figure figcaption>a {
         position: absolute;
         top: 0;
-        left: 0;
+        left: 10%;
         width: 100%;
-        height: 100%;
+        // height: 100%;
+        height: 70%;
     }
 
     /* Anchor will cover the whole item by default */
@@ -141,7 +159,9 @@
     }
 
     figure.effect-lily p {
-        color: rgba(255, 255, 255, 0.8);
+        color: #333;
+        font-size: 25px;
+        font-weight: 500;
         opacity: 0;
         -webkit-transition: opacity 0.2s, -webkit-transform 0.35s;
         transition: opacity 0.2s, transform 0.35s;
