--- a/css/_services.scss
+++ b/css/_services.scss
@@ -50,6 +50,10 @@
     h2 {
         color: #fff;
         text-align: center;
+
+         @include respond-below(sm) {
+                line-height: 50px;
+            }
     }
 
     .grid {
@@ -57,21 +61,27 @@
         clear: both;
         margin: 0 auto;
         padding: 1em 0 4em;
-        max-width: 1100px;
+        // max-width: 1100px;
         list-style: none;
         text-align: center;
 
         h6 {
             color: #fff;
+            padding-top: 10px;
         }
 
         .content {
             display: flex;
             flex-direction: column;
             align-items: flex-start;
+            padding: 20px 0 20px 0;
 
             @include respond-below(md) {
                 align-items: center;
+            }
+
+            .btn{
+                margin: 10px 0 20px 0 !important;
             }
         }
     }
