--- a/css/_services.scss
+++ b/css/_services.scss
@@ -51,9 +51,9 @@
         color: #fff;
         text-align: center;
 
-         @include respond-below(sm) {
-                line-height: 50px;
-            }
+        @include respond-below(sm) {
+            line-height: 50px;
+        }
     }
 
     .grid {
@@ -80,7 +80,7 @@
                 align-items: center;
             }
 
-            .btn{
+            .btn {
                 margin: 10px 0 20px 0 !important;
             }
         }
@@ -117,7 +117,8 @@
         font-size: 1.25em;
         -webkit-backface-visibility: hidden;
         backface-visibility: hidden;
-        .list{
+
+        .list {
             padding: 90px 0 90px 0;
         }
     }
@@ -255,3 +256,157 @@
 }
 
 // ========================  ========================== End
+
+
+// ================SERVICES DETAIL PAGE START=========================
+
+.heroo-area {
+    padding: 120px 0 120px 0;
+
+    h1 {
+        @include h1;
+        // color: white;
+        text-align: center;
+        line-height: 100px;
+
+        @include respond-below(sm) {
+            line-height: 65px;
+        }
+    }
+}
+
+.header-area {
+    padding: 120px 0 80px 0;
+
+    .header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0 140px 0 190px;
+
+        @include respond-below(lg) {
+            padding: 0 30px 0 30px;
+        }
+
+        @include respond-below(sm) {
+            padding: 0 0 0 0;
+        }
+
+        .image {
+            display: flex;
+            justify-content: center;
+
+            img {
+                width: 100%;
+
+                @include respond-below(md) {
+                    width: 60%;
+                }
+                @include respond-below(sm) {
+                    width: 60%;
+                }
+            }
+        }
+
+        .content {
+            @include respond-below(md) {
+                    padding-top: 20px
+                }
+            h4 {
+                @include h4;
+                line-height: 50px
+
+            }
+
+            p {
+                @include p;
+                text-align: justify;
+
+                @include respond-below(sm) {
+                    text-align: left;
+                }
+            }
+        }
+    }
+}
+
+.detail-area {
+    padding: 120px 0 80px 0;
+
+    .detail {
+        padding: 0 110px 0 110px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        @include respond-below(lg) {
+            padding: 0 0 0 0;
+        }
+
+        @include respond-below(sm) {
+            padding: 0 0 0 0;
+        }
+
+        h2 {
+            @include h2;
+            text-align: center;
+            line-height: 80px;
+
+            @include respond-below(sm) {
+                line-height: 50px;
+            }
+
+            // .unique {
+            //     color: rgb(232, 11, 11)
+            // }
+        }
+
+        .content {
+            padding-top: 20px;
+
+            p {
+                @include p;
+                text-align: center;
+
+                @include respond-below(sm) {
+                    text-align: left;
+                }
+            }
+        }
+    }
+}
+
+.list-area {
+    .lists {
+
+        // padding: 0 50px 0 50px;
+        .each-one {
+            padding: 0 60px 0 60px;
+
+            @include respond-below(lg) {
+                padding: 0 30px 0 30px;
+            }
+            @include respond-below(sm) {
+                padding: 0 0 0 0;
+            }
+
+            h5 {
+                @include h5;
+            }
+
+            p {
+                @include p;
+                color: #b7b7b7;
+                text-align: justify;
+                padding: 10px 0 10px 0;
+
+                @include respond-below(sm) {
+                    text-align: left;
+                }
+            }
+        }
+    }
+}
+
+// ================SERVICES DETAIL PAGE END=========================
