--- a/css/_portfolio.scss
+++ b/css/_portfolio.scss
@@ -5,6 +5,7 @@
         .portfolio {
             .swiper-wrapper {
                 .swiper-slide {
+
                     h4 {
                         @include h4;
                     }
@@ -15,18 +16,21 @@
 
                     .slider-bg-1 {
                         background: linear-gradient(#28002A, #000000);
+                        position: relative;
 
 
                     }
 
                     .slider-bg-2 {
                         background: linear-gradient(#2A0001, black);
+                        position: relative;
 
 
                     }
 
                     .slider-bg-3 {
                         background: linear-gradient(#12002a, black);
+                        position: relative;
 
 
                     }
@@ -35,8 +39,268 @@
                         width: 40%;
                         padding: 70px 0 50px 150px;
                     }
+
+                    .image {
+                        position: absolute;
+                        top: 0;
+                        left: 850px;
+
+                        img {
+                            width: 60%;
+                        }
+                    }
                 }
             }
         }
     }
 }
+
+// -------------PORTFOLIO DETAIL PAGE START-------------------
+
+.portfolio-hero {
+    padding: 120px 0 80px 0;
+
+    h1 {
+        @include h1;
+        text-align: center;
+        line-height: 100px;
+
+        @include respond-below(sm) {
+            line-height: 60px;
+        }
+
+    }
+}
+
+
+.latest-projects {
+    padding: 120px 0 80px 0;
+
+    .stiky-text {
+        position: absolute;
+        z-index: 999;
+        padding-left: 50px;
+        height: 40%;
+
+        @include respond-below(md) {
+            height: 28%;
+            width: 100%;
+        }
+
+        @include respond-below(sm) {
+            padding-left: 20px
+        }
+
+
+        p {
+            @include p;
+            width: 40%;
+            padding-top: 10px;
+
+            @include respond-below(md) {
+                width: 42%;
+            }
+
+            @include respond-below(sm) {
+                width: auto;
+            }
+
+        }
+
+        h2 {
+            @include h2;
+            color: rgb(255, 255, 255);
+            z-index: 999;
+        }
+
+
+        &::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 50%;
+            height: 100%;
+            z-index: -1;
+            transition: all 0.3s ease-in-out;
+            // background-color: #000000;
+        }
+
+        &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 50%;
+            height: 100%;
+            z-index: -1;
+            transition: all 0.3s ease-in-out;
+            // background-color: #dd42428a;
+            background: linear-gradient(90deg, rgba(15, 14, 14, 1) 61%, rgba(36, 34, 34, 1) 70%, rgba(52, 48, 48, 1) 74%, rgba(92, 84, 84, 1) 81%, rgba(103, 92, 94, 1) 84%, rgba(109, 96, 99, 1) 90%, rgba(117, 102, 107, 1) 94%, rgba(142, 121, 130, 1) 97%, rgba(166, 143, 151, 1) 100%);
+
+
+            @include respond-below(sm) {
+                width: 100%;
+            }
+
+        }
+    }
+
+    .prolatest {
+
+        display: flex;
+        align-items: center;
+
+
+
+
+        .swiper-wrapper {
+            position: relative;
+            margin-left: 10%;
+
+            @include respond-below(xl) {
+                // margin-left: 15%;
+            }
+
+            @include respond-below(lg) {
+                margin-left: 30%;
+            }
+
+            @include respond-below(md) {
+                margin-left: 35%;
+            }
+
+            @include respond-below(sm) {
+                padding-top: 70%;
+                margin-left: 0;
+            }
+
+
+            .swiper-slide {
+                text-align: center;
+                font-size: 18px;
+                background: #444;
+                display: flex;
+                // justify-content: center;
+                align-items: center;
+                width: 38%;
+
+                @include respond-below(lg) {
+                    width: 76%;
+                }
+
+                @include respond-below(md) {
+                    width: 100%;
+                }
+
+                @include respond-below(sm) {
+                    width: 90%;
+                }
+            }
+
+            .swiper-slide video {
+                display: block;
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+
+            // .swiper-slide {}
+
+
+        }
+    }
+}
+
+
+
+.watch-video-area {
+    padding: 120px 0 80px 0;
+
+
+    @include respond-below(lg) {
+        padding: 200px 0 80px 0;
+    }
+
+    .videos {
+        display: flex;
+        align-items: center;
+        padding: 0 80px 0 80px;
+
+        @include respond-below(sm) {
+            padding: 0 0 0 0;
+        }
+
+        .head {
+
+            h2 {
+                color: #fff;
+
+                @include respond-below(sm) {
+                    line-height: 50px;
+                }
+            }
+        }
+
+        .paragraph {
+            // width: 60%;
+
+            p {
+                color: #fff;
+
+            }
+        }
+    }
+
+    .video {
+        padding-top: 30px;
+
+        video {
+            width: 100%;
+        }
+    }
+}
+
+
+.project-text-area {
+    padding: 120px 0 80px 0;
+
+    h2 {
+        // @include h2;
+        text-align: center;
+        line-height: 70px;
+        color: #fff;
+
+        @include respond-below(sm) {
+            line-height: 60px;
+        }
+    }
+}
+
+
+.youtube-video-area {
+    h2 {
+        @include h2;
+        text-align: center;
+
+        @include respond-below(sm) {
+            line-height: 50px;
+        }
+
+    }
+
+    .vdo-area {
+        .video-content {
+            video {
+                width: 100%;
+                padding: 30px 0 0 0;
+
+                h6 {
+                    color: #fff;
+                }
+            }
+        }
+    }
+}
+
+// -------------PORTFOLIO DETAIL PAGE END-------------------
