--- a/css/main.css
+++ b/css/main.css
@@ -3626,14 +3626,294 @@ h6 {
 }
 .Portfolio-area .special-slider .portfolio .swiper-wrapper .swiper-slide .slider-bg-1 {
   background: linear-gradient(#28002A, #000000);
+  position: relative;
 }
 .Portfolio-area .special-slider .portfolio .swiper-wrapper .swiper-slide .slider-bg-2 {
   background: linear-gradient(#2A0001, black);
+  position: relative;
 }
 .Portfolio-area .special-slider .portfolio .swiper-wrapper .swiper-slide .slider-bg-3 {
   background: linear-gradient(#12002a, black);
+  position: relative;
 }
 .Portfolio-area .special-slider .portfolio .swiper-wrapper .swiper-slide .content {
   width: 40%;
   padding: 70px 0 50px 150px;
+}
+.Portfolio-area .special-slider .portfolio .swiper-wrapper .swiper-slide .image {
+  position: absolute;
+  top: 0;
+  left: 850px;
+}
+.Portfolio-area .special-slider .portfolio .swiper-wrapper .swiper-slide .image img {
+  width: 60%;
+}
+
+.portfolio-hero {
+  padding: 120px 0 80px 0;
+}
+.portfolio-hero h1 {
+  font-size: 5rem;
+  color: #fff;
+  font-weight: 400;
+  text-align: center;
+  line-height: 100px;
+}
+@media (max-width: 1599px) {
+  .portfolio-hero h1 {
+    font-size: 4.2rem;
+  }
+}
+@media (max-width: 1199px) {
+  .portfolio-hero h1 {
+    font-size: 3.5rem;
+  }
+}
+@media (max-width: 991px) {
+  .portfolio-hero h1 {
+    font-size: 2.9rem;
+  }
+}
+@media (max-width: 639px) {
+  .portfolio-hero h1 {
+    font-size: 2.3rem;
+  }
+}
+@media (max-width: 639px) {
+  .portfolio-hero h1 {
+    line-height: 60px;
+  }
+}
+
+.latest-projects {
+  padding: 120px 0 80px 0;
+}
+.latest-projects .stiky-text {
+  position: absolute;
+  z-index: 999;
+  padding-left: 50px;
+  height: 40%;
+}
+@media (max-width: 991px) {
+  .latest-projects .stiky-text {
+    height: 28%;
+    width: 100%;
+  }
+}
+@media (max-width: 639px) {
+  .latest-projects .stiky-text {
+    padding-left: 20px;
+  }
+}
+.latest-projects .stiky-text p {
+  color: #fff;
+  line-height: 26px;
+  width: 40%;
+  padding-top: 10px;
+}
+@media (max-width: 991px) {
+  .latest-projects .stiky-text p {
+    width: 42%;
+  }
+}
+@media (max-width: 639px) {
+  .latest-projects .stiky-text p {
+    width: auto;
+  }
+}
+.latest-projects .stiky-text h2 {
+  font-size: 3.5rem;
+  color: #fff;
+  font-weight: 400;
+  color: rgb(255, 255, 255);
+  z-index: 999;
+}
+@media (max-width: 1599px) {
+  .latest-projects .stiky-text h2 {
+    font-size: 3rem;
+  }
+}
+@media (max-width: 1199px) {
+  .latest-projects .stiky-text h2 {
+    font-size: 2.5rem;
+  }
+}
+@media (max-width: 991px) {
+  .latest-projects .stiky-text h2 {
+    font-size: 2.1rem;
+  }
+}
+@media (max-width: 639px) {
+  .latest-projects .stiky-text h2 {
+    font-size: 1.8rem;
+  }
+}
+.latest-projects .stiky-text::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  z-index: -1;
+  transition: all 0.3s ease-in-out;
+}
+.latest-projects .stiky-text::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  z-index: -1;
+  transition: all 0.3s ease-in-out;
+  background: linear-gradient(90deg, rgb(15, 14, 14) 61%, rgb(36, 34, 34) 70%, rgb(52, 48, 48) 74%, rgb(92, 84, 84) 81%, rgb(103, 92, 94) 84%, rgb(109, 96, 99) 90%, rgb(117, 102, 107) 94%, rgb(142, 121, 130) 97%, rgb(166, 143, 151) 100%);
+}
+@media (max-width: 639px) {
+  .latest-projects .stiky-text::after {
+    width: 100%;
+  }
+}
+.latest-projects .prolatest {
+  display: flex;
+  align-items: center;
+}
+.latest-projects .prolatest .swiper-wrapper {
+  position: relative;
+  margin-left: 10%;
+}
+@media (max-width: 1199px) {
+  .latest-projects .prolatest .swiper-wrapper {
+    margin-left: 30%;
+  }
+}
+@media (max-width: 991px) {
+  .latest-projects .prolatest .swiper-wrapper {
+    margin-left: 35%;
+  }
+}
+@media (max-width: 639px) {
+  .latest-projects .prolatest .swiper-wrapper {
+    padding-top: 70%;
+    margin-left: 0;
+  }
+}
+.latest-projects .prolatest .swiper-wrapper .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #444;
+  display: flex;
+  align-items: center;
+  width: 38%;
+}
+@media (max-width: 1199px) {
+  .latest-projects .prolatest .swiper-wrapper .swiper-slide {
+    width: 76%;
+  }
+}
+@media (max-width: 991px) {
+  .latest-projects .prolatest .swiper-wrapper .swiper-slide {
+    width: 100%;
+  }
+}
+@media (max-width: 639px) {
+  .latest-projects .prolatest .swiper-wrapper .swiper-slide {
+    width: 90%;
+  }
+}
+.latest-projects .prolatest .swiper-wrapper .swiper-slide video {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.watch-video-area {
+  padding: 120px 0 80px 0;
+}
+@media (max-width: 1199px) {
+  .watch-video-area {
+    padding: 200px 0 80px 0;
+  }
+}
+.watch-video-area .videos {
+  display: flex;
+  align-items: center;
+  padding: 0 80px 0 80px;
+}
+@media (max-width: 639px) {
+  .watch-video-area .videos {
+    padding: 0 0 0 0;
+  }
+}
+.watch-video-area .videos .head h2 {
+  color: #fff;
+}
+@media (max-width: 639px) {
+  .watch-video-area .videos .head h2 {
+    line-height: 50px;
+  }
+}
+.watch-video-area .videos .paragraph p {
+  color: #fff;
+}
+.watch-video-area .video {
+  padding-top: 30px;
+}
+.watch-video-area .video video {
+  width: 100%;
+}
+
+.project-text-area {
+  padding: 120px 0 80px 0;
+}
+.project-text-area h2 {
+  text-align: center;
+  line-height: 70px;
+  color: #fff;
+}
+@media (max-width: 639px) {
+  .project-text-area h2 {
+    line-height: 60px;
+  }
+}
+
+.youtube-video-area h2 {
+  font-size: 3.5rem;
+  color: #fff;
+  font-weight: 400;
+  text-align: center;
+}
+@media (max-width: 1599px) {
+  .youtube-video-area h2 {
+    font-size: 3rem;
+  }
+}
+@media (max-width: 1199px) {
+  .youtube-video-area h2 {
+    font-size: 2.5rem;
+  }
+}
+@media (max-width: 991px) {
+  .youtube-video-area h2 {
+    font-size: 2.1rem;
+  }
+}
+@media (max-width: 639px) {
+  .youtube-video-area h2 {
+    font-size: 1.8rem;
+  }
+}
+@media (max-width: 639px) {
+  .youtube-video-area h2 {
+    line-height: 50px;
+  }
+}
+.youtube-video-area .vdo-area .video-content video {
+  width: 100%;
+  padding: 30px 0 0 0;
+}
+.youtube-video-area .vdo-area .video-content video h6 {
+  color: #fff;
 }/*# sourceMappingURL=main.css.map */
